# cargia

./: .cursorrules  .dockerignore  .gitignore  Dockerfile  LICENSE  docker_rebuild.ps1  docker_rebuild_EXAMPLE.ps1  pyproject.toml  readme.md  requirements-docker.txt  requirements.txt  sample_task.json  sample_tast_reformatted.json  token_length_analysis_20250726_104922.json  token_length_analysis_20250730_230719.json
.cursor/rules/: python-cargia-creation.mdc  python-cargia-trainer-motivation.mdc  python-cargia-trainer-steps.mdc
cargia/: cleanup_incomplete_solves.py  color_config.json  data_manager.py  grid_utils.py  grid_widget.py  main.py  settings.json  test_mic_transcription.py  test_transcription.py  text_cleaner.py  transcription.py
cargia/common/: __init__.py  gemma3_wrapper.py  grid_image.py
cargia/training/: RUNPOD_VOLUME_GUIDE.md  __init__.py  augment.py  config.py  data_harness.py  (+8 more)
scripts/: README_data_consolidation.md  analyze_token_lengths.py  arc_agi_reformatting  cleanup_incomplete_solves.py  delete_solves.py  example_unified_usage.py  export_unified_solves.py  gui_stream_transcribe_no_overlap.py  load_unified_solves.py  rename_dadas_pictures.py  run_text_cleaner.py  test_character_invariance.py  test_color_invariance.py  test_data_consolidation.py  test_gemma3.py  test_gemma3_wrapper.py  test_solve_loader.py  test_spatial_transforms.py  test_text_cleaner.py  test_text_comparison.py  test_thought_cleaning.py  test_torchdynamo_fix.py
solves_export/: index.json  solve_001_task_bd4472b8.json  solve_002_task_50aad11f.json  solve_003_task_e9afcf9a.json  solve_004_task_8731374e.json  solve_005_task_a57f2f04.json  solve_006_task_506d28a5.json  solve_009_task_d687bc17.json  solve_010_task_0962bcdd.json  solve_011_task_6e19193c.json  solve_012_task_32e9702f.json  solve_013_task_44f52bb0.json  solve_018_task_7e4d4f7c.json  solve_019_task_9968a131.json  solve_020_task_2dee498d.json  solve_021_task_dce56571.json  solve_022_task_1a244afd.json  solve_023_task_5751f35e.json  solve_024_task_23581191.json  solve_025_task_50a16a69.json  solve_026_task_20818e16.json  solve_027_task_bb43febb.json  solve_028_task_c444b776.json  solve_029_task_780d0b14.json  solve_030_task_b1948b0a.json  solve_031_task_817e6c09.json  solve_032_task_37d3e8b2.json  solve_033_task_e5062a87.json  solve_034_task_2a5f8217.json  solve_035_task_ce22a75a.json  solve_036_task_e048c9ed.json  solve_037_task_e6de6e8f.json  solve_038_task_e9bb6954.json  solve_039_task_1cf80156.json  solve_040_task_11852cab.json  solve_041_task_f0df5ff0.json  solve_042_task_d4b1c2b1.json  solve_043_task_5b37cb25.json  solve_044_task_4be741c5.json  solve_045_task_f8a8fe49.json  (+138 more)
(+1133 files in other folders)
