[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cargia"
version = "0.1.0"
description = "ARC-AGI Labeling Tool"
authors = [
    {name = "Thomas", email = "your.email@example.com"}
]
requires-python = ">=3.8"
dependencies = [
    "PyQt6",
    "numpy",
    "Pillow",
    "faster-whisper",
    "sounddevice",
    "huggingface-hub",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]

[tool.setuptools]
packages = ["cargia"]
package-dir = {"" = "."}

[tool.setuptools.package-data]
cargia = ["*.json"]