[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cargia"
version = "0.1.0"
description = "ARC-AGI Labeling Tool"
authors = [
    {name = "Thomas", email = "your.email@example.com"}
]
requires-python = ">=3.8"
dependencies = [
    # Data collection dependencies
    "PyQt6",
    "numpy",
    "Pillow",
    "faster-whisper",
    "sounddevice",
    "huggingface-hub",
    # Gemma3 model training dependencies
    "torch>=2.3.0",
    "transformers>=4.38.0",
    "accelerate>=0.27.0",
    "datasets>=2.17.0",
    "tensorboard>=2.15.0",
    "scikit-image>=0.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]

[tool.setuptools]
packages = ["cargia"]
package-dir = {"" = "."}

[tool.setuptools.package-data]
cargia = ["*.json"]